tests/testdata/errors/break_outside_loop.pine
// Test break outside loop - should fail

var x = 10
break

// Expected error:
// error [break-outside-loop]: `break` is only valid inside a loop
